# riegeli

./: .bazelrc  .gitignore  MANIFEST.in  MODULE.bazel  README.md  WORKSPACE  com_google_highwayhash.BUILD  configure  net_zstd.BUILD  zlib.BUILD
doc/: README.md  data_encoding_primitives.md  format_examples.md  implementation_guide.md  index.md  quick_reference.md  record_writer_options.md  riegeli_records_file_format.md  transposed_chunk_format.md
go/: go.mod  go.sum
go/riegeli/: errors.go  golden_test.go  position.go  reader.go  reader_options.go  riegeli.go  riegeli_test.go  writer.go  writer_options.go
io_uring_test/: BUILD  io_test.cc  io_uring_test.cc  io_uring_write_test.cc  syn_test_file
kotlin/src/com/google/riegeli/: BUILD.bazel  Riegeli.kt
kotlin/test/com/google/riegeli/: BUILD.bazel  RiegeliTest.kt
python/: BUILD  MANIFEST.in  README.md  build_pip_package.sh  setup.py
python/riegeli/: BUILD  BUILD.tpl  __init__.py  py_extension.bzl  python_configure.bzl
riegeli/: BUILD  __init__.py
riegeli/base/: BUILD  any.h  any_dependency.h  any_dependency_initializer.h  any_dependency_internal.h  any_initializer.h  any_internal.h  arithmetic.h  assert.cc  assert.h  background_cleaning.cc  background_cleaning.h  base.cc  base.h  binary_search.h  buffer.cc  buffer.h  buffering.h  byte_fill.cc  byte_fill.h  bytes_ref.h  c_string_ref.h  canonical_errors.cc  canonical_errors.h  chain.cc  chain.h  chain_base.h  chain_details.h  closing_ptr.h  compact_string.cc  compact_string.h  compare.h  constexpr.h  cord_iterator_span.cc  cord_iterator_span.h  cord_utils.cc  cord_utils.h  debug.cc  debug.h  dependency.h  (+78 more)
riegeli/bazel/: BUILD  README.md  googleapis.modules.patch
riegeli/brotli/: BUILD  brotli_allocator.cc  brotli_allocator.h  brotli_dictionary.cc  brotli_dictionary.h  brotli_reader.cc  brotli_reader.h  brotli_writer.cc  brotli_writer.h
riegeli/bytes/: BUILD  absl_stringify_writer.h  array_backward_writer.cc  array_backward_writer.h  array_writer.cc  array_writer.h  backward_writer.cc  backward_writer.h  backward_writer_utils.cc  backward_writer_utils.h  brotli_allocator.cc  brotli_allocator.h  brotli_reader.cc  brotli_reader.h  brotli_writer.cc  brotli_writer.h  buffer.h  buffer_options.cc  buffer_options.h  buffered_reader.cc  buffered_reader.h  buffered_writer.cc  buffered_writer.h  cfile_dependency.h  cfile_handle.cc  cfile_handle.h  cfile_internal.cc  cfile_internal.h  cfile_internal_for_cc.h  cfile_reader.cc  cfile_reader.h  cfile_writer.cc  cfile_writer.h  chain_backward_writer.cc  chain_backward_writer.h  chain_reader.cc  chain_reader.h  chain_writer.cc  chain_writer.h  compact_string_writer.h  (+169 more)
riegeli/bzip2/: BUILD  bzip2_error.cc  bzip2_error.h  bzip2_reader.cc  bzip2_reader.h  bzip2_writer.cc  bzip2_writer.h
riegeli/chunk_encoding/: BUILD  README.md  brotli_encoder_selection.cc  brotli_encoder_selection.h  canonical_varint.cc  canonical_varint.h  chunk.cc  chunk.h  chunk_decoder.cc  chunk_decoder.h  chunk_encoder.cc  chunk_encoder.h  compressor.cc  compressor.h  compressor_options.cc  compressor_options.h  constants.h  decompressor.cc  decompressor.h  deferred_encoder.cc  deferred_encoder.h  field_filter.h  field_projection.cc  field_projection.h  hash.cc  hash.h  internal_types.h  simple_decoder.cc  simple_decoder.h  simple_encoder.cc  simple_encoder.h  transpose_decoder.cc  transpose_decoder.h  transpose_encoder.cc  transpose_encoder.h  transpose_internal.h  types.h
riegeli/containers/: BUILD  chunked_sorted_string_set.cc  chunked_sorted_string_set.h  linear_sorted_string_set.cc  linear_sorted_string_set.h
riegeli/csv/: BUILD  containers.h  csv_reader.cc  csv_reader.h  csv_record.cc  csv_record.h  csv_writer.cc  csv_writer.h
riegeli/digests/: BUILD  adler32_digester.cc  adler32_digester.h  crc32_digester.cc  crc32_digester.h  crc32c_digester.h  digest_converter.h  digester.cc  digester.h  digester_handle.cc  digester_handle.h  digesting_internal.h  digesting_reader.cc  digesting_reader.h  digesting_writer.cc  digesting_writer.h  highwayhash_digester.cc  highwayhash_digester.h  md5_digester.h  openssl_digester.h  sha1_digester.h  sha256_digester.h  sha512_256_digester.h  sha512_digester.h  wrapping_digester.h
riegeli/endian/: BUILD  endian_common.h  endian_internal.h  endian_reading.h  endian_writing.h
riegeli/gcs/: BUILD  gcs_internal.h  gcs_object.cc  gcs_object.h  gcs_reader.cc  gcs_reader.h  gcs_writer.cc  gcs_writer.h
riegeli/iouring/: BUILD  fd_async_io_uring.cc  fd_async_io_uring.h  fd_io_uring.cc  fd_io_uring.h  fd_io_uring_options.cc  fd_io_uring_options.h  fd_sync_io_uring.cc  fd_sync_io_uring.h
riegeli/lines/: BUILD  line_reading.cc  line_reading.h  line_writing.h  newline.h  text_reader.cc  text_reader.h  text_writer.cc  text_writer.h
riegeli/lz4/: BUILD  lz4_dictionary.cc  lz4_dictionary.h  lz4_reader.cc  lz4_reader.h  lz4_writer.cc  lz4_writer.h
riegeli/messages/: BUILD  context_projection.h  dynamic_field_handler.h  field_copier.h  field_handler_map.h  field_handlers.cc  field_handlers.h  field_skipper.h  fields_found.h  map_entry_field.h  message_parse.cc  message_parse.h  message_serialize.cc  message_serialize.h  message_wire_format.cc  message_wire_format.h  parse_message.cc  parse_message.h  serialize_message.cc  serialize_message.h  serialized_message_assembler.cc  serialized_message_assembler.h  serialized_message_backward_writer.cc  serialized_message_backward_writer.h  serialized_message_internal.h  serialized_message_reader.cc  serialized_message_reader.h  serialized_message_reader2.cc  serialized_message_reader2.h  serialized_message_reader_internal.h  serialized_message_rewriter.cc  serialized_message_rewriter.h  serialized_message_writer.cc  serialized_message_writer.h  text_parse.cc  text_parse.h  text_parse_message.cc  text_parse_message.h  text_print.cc  text_print.h  (+2 more)
riegeli/ordered_varint/: BUILD  ordered_varint.h  ordered_varint_internal.h  ordered_varint_reading.cc  ordered_varint_reading.h  ordered_varint_writing.cc  ordered_varint_writing.h
tf_dependency/: BUILD  BUILD.tpl  tf_configure.bzl
(+185 files in other folders)
