module(
    name = "riegeli",
    repo_name = "com_google_riegeli",
)

bazel_dep(
    name = "abseil-cpp",
    version = "20260107.0",
    repo_name = "com_google_absl",
)
bazel_dep(
    name = "abseil-py",
    version = "2.1.0",  # 2.4.0 broken?
    repo_name = "absl_py",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.9.0",
)
bazel_dep(
    name = "boringssl",
    version = "0.20260413.0",
)
bazel_dep(
    name = "brotli",
    version = "1.2.0.bcr.1",
    repo_name = "org_brotli",
)
bazel_dep(
    name = "bzip2",
    version = "1.0.8.bcr.4",
)
bazel_dep(
    name = "highwayhash",
    version = "0.0.0-20240305-5ad3bf8.bcr.1",
)
bazel_dep(
    name = "lz4",
    version = "1.10.0.bcr.1",
)
bazel_dep(
    name = "platforms",
    version = "1.0.0",
)
bazel_dep(
    name = "protobuf",
    version = "34.1",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "rules_cc",
    version = "0.2.18",
)
bazel_dep(
    name = "rules_python",
    version = "2.0.0-rc3",
)
bazel_dep(
    name = "snappy",
    version = "1.2.2.bcr.3",
)
bazel_dep(
    name = "xz",
    version = "5.4.5.bcr.8",
)
bazel_dep(
    name = "zlib",
    version = "1.3.2",
)
bazel_dep(
    name = "zstd",
    version = "1.5.7.bcr.1",
    repo_name = "net_zstd",
)
bazel_dep(
    name = "google_cloud_cpp",
    version = "3.3.0",
)

# Not used directly, but google_cloud_cpp@3.3.0 brings rules_go@0.58.3 which is
# incompatible with bazel 9.
bazel_dep(
    name = "rules_go",
    version = "0.60.0",
    repo_name = None,
)

# Configure hermetic Python toolchain
SUPPORTED_PYTHON_VERSIONS = [
    "3.8",
    "3.9",
    "3.10",
    "3.11",
    "3.12",
    "3.13",
]

DEFAULT_PYTHON_VERSION = SUPPORTED_PYTHON_VERSIONS[-1]

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

[
    python.toolchain(
        is_default = version == DEFAULT_PYTHON_VERSION,
        python_version = version,
    )
    for version in SUPPORTED_PYTHON_VERSIONS
]
